--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI问题解答助手</title>
+    <title>AI Question Assistant</title>
     <style>
         body {
             width: 350px;
@@ -109,13 +109,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>AI问题解答助手</h1>
+        <h1>AI Question Assistant</h1>
         
         <div class="button-container">
-            <button id="get-questions">提取问题</button>
-            <button id="get-ai-answers" disabled>获取AI答案</button>
-            <button id="auto-select-answers" style="display: none;">自动选择答案</button>
-            <button id="view-history">查看历史</button>
+            <button id="extract-questions">Extract Questions</button>
+            <button id="get-ai-answers" disabled>Get AI Answers</button>
+            <button id="auto-select-answers" style="display: none;">Auto Select Answers</button>
+            <button id="view-history">View History</button>
         </div>
         
         <div id="status"></div>
